--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,21 @@
-# Configuración para correr la aplicación
-spring.datasource.url=jdbc:h2:mem:prodDb
+#Configuración para correr la aplicación
+spring.datasource.url=jdbc:h2:mem:challengeDb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
 spring.datasource.platform=h2
 spring.datasource.schema=classpath:schema.sql
 spring.datasource.data=classpath:data.sql
 
-# Configuración de JPA
+#fix temporal para evitar que swagger se rompa con el @RestControllerAdvise
+springdoc.override-with-generic-response=false
+
+#Configuración de JPA
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# Configuración de Actuator y Métricas
+#Configuración de Actuator y Métricas
 management.endpoints.web.exposure.include=health,metrics
 management.metrics.export.prometheus.enabled=true
